VB/Lib/xcgui.bas

Declare Function XSView_ScrollLeftLine Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSView_ScrollRightLine Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSView_ScrollTopLine Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSView_ScrollDownLine Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSView_ScrollLeft Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSView_ScrollRight Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSView_ScrollTop Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XSView_ScrollBottom Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XShape_GetParentEle Lib "xcgui.dll" (ByVal hShape As Long) As Long
Declare Function XShape_GetParentLayout Lib "xcgui.dll" (ByVal hShape As Long) As Long
Declare Sub XShape_SetID Lib "xcgui.dll" (ByVal hShape As Long, ByVal nID As Long)
Declare Function XShape_GetID Lib "xcgui.dll" (ByVal hShape As Long) As Long
Declare Sub XShape_Redraw Lib "xcgui.dll" (ByVal hShape As Long)
Declare Function XShape_GetWidth Lib "xcgui.dll" (ByVal hShape As Long) As Long
Declare Function XShape_GetHeight Lib "xcgui.dll" (ByVal hShape As Long) As Long
Declare Sub XShape_GetRect Lib "xcgui.dll" (ByVal hShape As Long, ByVal pRect As rect)
Declare Sub XShape_SetRect Lib "xcgui.dll" (ByVal hShape As Long, ByVal pRect As rect)
Declare Sub XShape_GetContentSize Lib "xcgui.dll" (ByVal hShape As Long, ByVal pSize As size)
Declare Sub XShape_ShowLayout Lib "xcgui.dll" (ByVal hShape As Long, ByVal bShow As Boolean)
Declare Sub XShape_AdjustLayout Lib "xcgui.dll" (ByVal hShape As Long)
Declare Sub XShape_Destroy Lib "xcgui.dll" (ByVal hShape As Long)
Declare Function XTextBlock_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pName As String, ByVal hParent As Long) As Long
Declare Sub XTextBlock_SetText Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal pName As String)
Declare Sub XTextBlock_SetFont Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal hFontx As Long)
Declare Sub XTextBlock_SetTextColor Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XTextBlock_GetTextColor Lib "xcgui.dll" (ByVal hTextBlock As Long) As Long
Declare Sub XTextBlock_SetTextAlign Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal align As Long)
Declare Sub XTextBlock_SetOffset Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XTextBlock_SetLayoutWidth Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal nFlag As Long, ByVal width As Long)
Declare Sub XTextBlock_SetLayoutHeight Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal nFlag As Long, ByVal height As Long)
Declare Sub XTextBlock_GetLayoutWidth Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal pFlag As Long, ByVal pWidth As Long)
Declare Sub XTextBlock_GetLayoutHeight Lib "xcgui.dll" (ByVal hTextBlock As Long, ByVal pFlag As Long, ByVal pHeight As Long)
Declare Function XShapePic_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XShapePic_SetImage Lib "xcgui.dll" (ByVal hShape As Long, ByVal hImage As Long)
Declare Sub XShapePic_SetLayoutWidth Lib "xcgui.dll" (ByVal hShape As Long, ByVal nFlag As Long, ByVal width As Long)
Declare Sub XShapePic_SetLayoutHeight Lib "xcgui.dll" (ByVal hShape As Long, ByVal nFlag As Long, ByVal height As Long)
Declare Sub XShapePic_GetLayoutWidth Lib "xcgui.dll" (ByVal hShape As Long, ByVal pFlag As Long, ByVal pWidth As Long)
Declare Sub XShapePic_GetLayoutHeight Lib "xcgui.dll" (ByVal hShape As Long, ByVal pFlag As Long, ByVal pHeight As Long)
Declare Function XShapeRect_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XShapeRect_SetBorderColor Lib "xcgui.dll" (ByVal hShape As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XShapeRect_SetFillColor Lib "xcgui.dll" (ByVal hShape As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XShapeRect_SetRoundAngle Lib "xcgui.dll" (ByVal hShape As Long, ByVal nWidth As Long, ByVal nHeight As Long)
Declare Sub XShapeRect_GetRoundAngle Lib "xcgui.dll" (ByVal hShape As Long, ByVal pWidth As Long, ByVal pHeight As Long)
Declare Sub XShapeRect_EnableBorder Lib "xcgui.dll" (ByVal hShape As Long, ByVal bEnable As Boolean)
Declare Sub XShapeRect_EnableFill Lib "xcgui.dll" (ByVal hShape As Long, ByVal bEnable As Boolean)
Declare Sub XShapeRect_EnableRoundAngle Lib "xcgui.dll" (ByVal hShape As Long, ByVal bEnable As Boolean)
Declare Function XShapeEllipse_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XShapeEllipse_SetBorderColor Lib "xcgui.dll" (ByVal hShape As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XShapeEllipse_SetFillColor Lib "xcgui.dll" (ByVal hShape As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XShapeEllipse_EnableBorder Lib "xcgui.dll" (ByVal hShape As Long, ByVal bEnable As Boolean)
Declare Sub XShapeEllipse_EnableFill Lib "xcgui.dll" (ByVal hShape As Long, ByVal bEnable As Boolean)
Declare Function XShapeGroupBox_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pName As String, ByVal hParent As Long) As Long
Declare Sub XShapeGroupBox_SetBorderColor Lib "xcgui.dll" (ByVal hShape As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XShapeGroupBox_SetTextColor Lib "xcgui.dll" (ByVal hShape As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XShapeGroupBox_SetFontX Lib "xcgui.dll" (ByVal hShape As Long, ByVal hFontx As Long)
Declare Sub XShapeGroupBox_SetTextOffset Lib "xcgui.dll" (ByVal hShape As Long, ByVal offsetX As Long, ByVal offsetY As Long)
Declare Sub XShapeGroupBox_SetRoundAngle Lib "xcgui.dll" (ByVal hShape As Long, ByVal nWidth As Long, ByVal nHeight As Long)
Declare Sub XShapeGroupBox_SetText Lib "xcgui.dll" (ByVal hShape As Long, ByVal pText As String)
Declare Sub XShapeGroupBox_GetTextOffset Lib "xcgui.dll" (ByVal hShape As Long, ByVal pOffsetX As Long, ByVal pOffsetY As Long)
Declare Sub XShapeGroupBox_GetRoundAngle Lib "xcgui.dll" (ByVal hShape As Long, ByVal pWidth As Long, ByVal pHeight As Long)
Declare Sub XShapeGroupBox_EnableRoundAngle Lib "xcgui.dll" (ByVal hShape As Long, ByVal bEnable As Boolean)
Declare Function XShapeLine_Create Lib "xcgui.dll" (ByVal x1 As Long, ByVal y1 As Long, ByVal x2 As Long, ByVal y2 As Long, ByVal hParent As Long) As Long
Declare Sub XShapeLine_SetPosition Lib "xcgui.dll" (ByVal hShape As Long, ByVal x1 As Long, ByVal y1 As Long, ByVal x2 As Long, ByVal y2 As Long)
Declare Sub XShapeLine_SetColor Lib "xcgui.dll" (ByVal hShape As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XSliderBar_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XSliderBar_SetRange Lib "xcgui.dll" (ByVal hEle As Long, ByVal range As Long)
Declare Function XSliderBar_GetRange Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XSliderBar_SetButtonWidth Lib "xcgui.dll" (ByVal hEle As Long, ByVal width As Long)
Declare Sub XSliderBar_SetButtonHeight Lib "xcgui.dll" (ByVal hEle As Long, ByVal height As Long)
Declare Sub XSliderBar_SetSpaceTwo Lib "xcgui.dll" (ByVal hEle As Long, ByVal leftSize As Long, ByVal rightSize As Long)
Declare Sub XSliderBar_SetPos Lib "xcgui.dll" (ByVal hEle As Long, ByVal pos As Long)
Declare Function XSliderBar_GetPos Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XSliderBar_GetButton Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XSliderBar_SetHorizon Lib "xcgui.dll" (ByVal hEle As Long, ByVal bHorizon As Boolean)
Declare Sub XSliderBar_SetImageLoad Lib "xcgui.dll" (ByVal hEle As Long, ByVal hImage As Long)
Declare Function XTabBar_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XTabBar_AddLabel Lib "xcgui.dll" (ByVal hEle As Long, ByVal pName As String) As Long
Declare Function XTabBar_InsertLabel Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long, ByVal pName As String) As Long
Declare Function XTabBar_DeleteLabel Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Boolean
Declare Sub XTabBar_DeleteLabelAll Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XTabBar_GetLabel Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Long
Declare Function XTabBar_GetSelect Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XTabBar_GetLabelSpacing Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XTabBar_GetLabelCount Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XTabBar_SetLabelSpacing Lib "xcgui.dll" (ByVal hEle As Long, ByVal spacing As Long)
Declare Sub XTabBar_SetSelect Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long)
Declare Sub XTabBar_SetUp Lib "xcgui.dll" (ByVal hEle As Long)
Declare Sub XTabBar_SetDown Lib "xcgui.dll" (ByVal hEle As Long)
Declare Sub XTabBar_EnableTile Lib "xcgui.dll" (ByVal hEle As Long, ByVal bTile As Boolean)
Declare Sub XTabBar_EnableClose Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XTabBar_SetCloseSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal pSize As size)
Declare Sub XTabBar_SetTurnButtonSize Lib "xcgui.dll" (ByVal hEle As Long, ByVal pSize As size)
Declare Function XTextLink_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal pName As String, ByVal hParent As Long) As Long
Declare Sub XTextLink_EnableUnderlineLeave Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XTextLink_EnableUnderlineStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Sub XTextLink_SetTextColorStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XTextLink_SetUnderlineColorLeave Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XTextLink_SetUnderlineColorStay Lib "xcgui.dll" (ByVal hEle As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Function XToolBar_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XToolBar_InsertEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal hNewEle As Long, ByVal index As Long) As Long
Declare Function XToolBar_InsertSeparator Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Long
Declare Sub XToolBar_EnableButtonMenu Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
Declare Function XToolBar_GetHEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long) As Long
Declare Function XToolBar_GetButtonLeft Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XToolBar_GetButtonRight Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Function XToolBar_GetButtonMenu Lib "xcgui.dll" (ByVal hEle As Long) As Long
Declare Sub XToolBar_DeleteEle Lib "xcgui.dll" (ByVal hEle As Long, ByVal index As Long)
Declare Sub XToolBar_DeleteAllEle Lib "xcgui.dll" (ByVal hEle As Long)
Declare Function XTree_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Function XTree_SetItemTemplateXML Lib "xcgui.dll" (ByVal hEle As Long, ByVal pXmlFile As String) As Boolean
Declare Function XTree_SetItemTemplateXMLSel Lib "xcgui.dll" (ByVal hEle As Long, ByVal pXmlFile As String) As Boolean
Declare Sub XTree_SetStyle Lib "xcgui.dll" (ByVal hEle As Long, ByVal style As Long)
Declare Function XTree_SetItemData Lib "xcgui.dll" (ByVal hEle As Long, ByVal nID As Long, ByVal nUserData As Long) As Boolean
